feat: product display from server done
- Added products context
- Fetched products from server.
- Displayed products.

--- a/src/components/display-item-card/displayItem.css
+++ b/src/components/display-item-card/displayItem.css
@@ -53,3 +53,7 @@
 .card__img-container {
   padding: var(--scale-sm) var(--scale-xl);
 }
+.card__img-container img {
+  height: 420px !important;
+  width: 180px !important;
+}
