--- a/src/components/filter/filter.css
+++ b/src/components/filter/filter.css
@@ -7,3 +7,9 @@
 .sort-heading button {
   margin-left: auto;
 }
+.spced-between {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.range-input{width:100%}
