feat: pages added with typescript

--- a/src/stylesheets/utility.css
+++ b/src/stylesheets/utility.css
@@ -39,3 +39,8 @@ a:hover {
 .relative {
   position: relative;
 }
+.spced-between {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
