--- a/src/pages/filter/filter-page.module.css
+++ b/src/pages/filter/filter-page.module.css
@@ -4,6 +4,7 @@
   grid-template-areas: "aside main";
   grid-template-columns: 0.2fr 0.8fr;
   width: 100%;
+  position: relative;
 }
 .aside_wrapper {
   background-color: var(--secondary-color);
@@ -20,8 +21,6 @@
 
 .main_wrapper {
   grid-area: main;
-  /* width: 100%; */
-  margin-left: 20vw;
 }
 .filter_btn {
   display: none;
