--- a/src/pages/cart/cart-page.module.css
+++ b/src/pages/cart/cart-page.module.css
@@ -2,6 +2,7 @@
   align-items: flex-start;
   display: flex;
   flex-wrap: wrap;
+  position: relative;
 }
 .cart__items {
   flex-grow: 2;
@@ -12,7 +13,10 @@
   position: sticky;
   top: 7rem;
 }
-
+.coupon_input {
+  margin: 0 auto;
+  padding: 0;
+}
 .cart__checkout .input-group {
   margin: 0;
   padding: 0;
@@ -22,6 +26,13 @@
 }
 .cart__order_btn .btn {
   padding: var(--scale-md) var(--scale-lg);
+}
+a:hover {
+  text-decoration: none;
+}
+.strike {
+  color: var(--danger-color);
+  text-decoration: line-through;
 }
 @media screen and (max-width: 550px) {
   .cart__items_container {
