--- a/src/components/product-details/product-details.module.css
+++ b/src/components/product-details/product-details.module.css
@@ -14,6 +14,12 @@
   padding: var(--scale-lg);
   position: relative;
 }
+.card__wishlist{
+  position: absolute;
+  top: var(--scale-md);
+  right: var(--scale-md);
+  font-size: var(--scale-lg);
+}
 .product__details {
   flex-grow: 2;
 }
